// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MobileLayout /> should handle Layout props 1`] = `
<MobileLayout>
  <Layout
    xsMaxWidth="xs"
    xxlMaxWidth="sm"
    xxsPadding="md"
    xxxsPadding="sm"
  >
    <div
      className="layout-wrapper layout-xxl-padding-sm layout-xl-padding-sm layout-lg-padding-sm layout-md-padding-sm layout-sm-padding-sm layout-xs-padding-sm layout-xxs-padding-md layout-xxxs-padding-sm"
    >
      <div
        className="layout layout-xxl-width-sm layout-xl-width-sm layout-lg-width-sm layout-md-width-sm layout-sm-width-sm layout-xs-width-xs layout-xxs-width-xs layout-xxxs-width-xs"
      >
        <div>
          Foo
        </div>
        <div>
          Bar
        </div>
        <div>
          Baz
        </div>
      </div>
    </div>
  </Layout>
</MobileLayout>
`;

exports[`<MobileLayout /> should renders without props 1`] = `
<MobileLayout>
  <Layout
    xsMaxWidth="xs"
    xxlMaxWidth="sm"
    xxsPadding="md"
    xxxsPadding="sm"
  >
    <div
      className="layout-wrapper layout-xxl-padding-sm layout-xl-padding-sm layout-lg-padding-sm layout-md-padding-sm layout-sm-padding-sm layout-xs-padding-sm layout-xxs-padding-md layout-xxxs-padding-sm"
    >
      <div
        className="layout layout-xxl-width-sm layout-xl-width-sm layout-lg-width-sm layout-md-width-sm layout-sm-width-sm layout-xs-width-xs layout-xxs-width-xs layout-xxxs-width-xs"
      />
    </div>
  </Layout>
</MobileLayout>
`;
